; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-timer.c_ff_timer_schedule.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-timer.c_ff_timer_schedule.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ff_timer = type { i32, i64, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_timer_schedule(%struct.ff_timer* %0, i64 %1) #0 {
  %3 = alloca %struct.ff_timer*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.ff_timer* %0, %struct.ff_timer** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = call i64 (...) @av_gettime()
  store i64 %7, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* %4, align 8
  %10 = add nsw i64 %8, %9
  store i64 %10, i64* %6, align 8
  %11 = load %struct.ff_timer*, %struct.ff_timer** %3, align 8
  %12 = getelementptr inbounds %struct.ff_timer, %struct.ff_timer* %11, i32 0, i32 2
  %13 = call i32 @pthread_mutex_lock(i32* %12)
  %14 = load %struct.ff_timer*, %struct.ff_timer** %3, align 8
  %15 = getelementptr inbounds %struct.ff_timer, %struct.ff_timer* %14, i32 0, i32 0
  store i32 1, i32* %15, align 8
  %16 = load i64, i64* %6, align 8
  %17 = load %struct.ff_timer*, %struct.ff_timer** %3, align 8
  %18 = getelementptr inbounds %struct.ff_timer, %struct.ff_timer* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = icmp slt i64 %16, %19
  br i1 %20, label %27, label %21

21:                                               ; preds = %2
  %22 = load i64, i64* %5, align 8
  %23 = load %struct.ff_timer*, %struct.ff_timer** %3, align 8
  %24 = getelementptr inbounds %struct.ff_timer, %struct.ff_timer* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = icmp sgt i64 %22, %25
  br i1 %26, label %27, label %31

27:                                               ; preds = %21, %2
  %28 = load i64, i64* %6, align 8
  %29 = load %struct.ff_timer*, %struct.ff_timer** %3, align 8
  %30 = getelementptr inbounds %struct.ff_timer, %struct.ff_timer* %29, i32 0, i32 1
  store i64 %28, i64* %30, align 8
  br label %31

31:                                               ; preds = %27, %21
  %32 = load %struct.ff_timer*, %struct.ff_timer** %3, align 8
  %33 = getelementptr inbounds %struct.ff_timer, %struct.ff_timer* %32, i32 0, i32 3
  %34 = call i32 @pthread_cond_signal(i32* %33)
  %35 = load %struct.ff_timer*, %struct.ff_timer** %3, align 8
  %36 = getelementptr inbounds %struct.ff_timer, %struct.ff_timer* %35, i32 0, i32 2
  %37 = call i32 @pthread_mutex_unlock(i32* %36)
  ret void
}

declare dso_local i64 @av_gettime(...) #1

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @pthread_cond_signal(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
